uj maven beallitas - sonat inicializálás

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
 	<artifactId>hu.bme.mit.spaceship</artifactId>
 	<version>0.5.0-SNAPSHOT</version>
 
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sonar.projectKey>Balaz98_ivt-lab</sonar.projectKey>
+		<sonar.organization>balaz98</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
